syntax = "proto3";

option java_package = "protos";
option java_outer_classname = "Proto";

message Request {
  enum RequestType {
    PEER_MEMBERSHIP = 0;
    REQUEST_PEERS = 1;
  }
  RequestType requestType = 1;
  repeated Torrent torrents = 2;
}

message Torrent {
  string filename = 1;
  int64 pieceLength = 2;
  repeated string pieces = 3;
  bool singleFileTorrent = 4;
  int64 totalSize = 5;
  string comment = 6;
  string createdBy = 7;
  int64 creationDate = 8;
  string infoHash = 9;
}
